--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -44,11 +44,11 @@
 	</body>
 
 	<script>
-		var pageFlag = 1; //是展现还是个人空间
+		var sliderId = 'top_';
+		idFlag = '';
 		var datasource = {}; //此界面的数据
 		var preModel = {}; //上个界面传过来的数据
 		zonepArray = [];
-		idFlag = 'zx';
 		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 		var personalunick = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).unick; //用户昵称
 		var publisherId;
@@ -75,7 +75,7 @@
 			window.addEventListener('refreshZonep', function(data) {
 				requestData(comData)
 			})
-			addSomeEvent();
+			dynamiclistitem.addSomeEvent();
 
 		});
 		//请求数据
@@ -136,8 +136,6 @@
 							for(var i in data1.RspData) {
 								//当前model
 								var tempModel = data1.RspData[i];
-								//更新头像
-								tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
 								//循环留言数组
 								//当前循环的model
 								var tempModel0 = tempRspData;
@@ -199,456 +197,30 @@
 		}
 
 		function setSpaceDetail(data) {
+
 			var table = document.body.querySelector('.mui-table-view');
 			table.innerHTML = '';
-
-			//[[InfoList],[ImageList],[InteractionList]]动态的信息
-			var Data = [];
-			var InfoList = []; //头部和内容
-			var ImageList = []; //内容的图片
-			var EncAddrList = [];
-			var InteractionList = []; //底部内容
-
-			//个人信息和内容
-			//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
-			//判断img是否为null，或者空
-			var tempModel = data;
-			//				tempModel.PublisherImg = updateHeadImg(tempModel.PublisherImg, 2)
-
-			var personalImage;
-			if(!tempModel.PublisherName) {
-				tempModel.PublisherName = tempModel.unick
-				personalImage = tempModel.uimg;
-			}
-			var personalName = tempModel.PublisherName;
-			var time = tempModel.PublishDate;
-			var contentText = tempModel.MsgContent;
-			InfoList.push(personalImage);
-			InfoList.push(personalName);
-			InfoList.push(time);
-			InfoList.push(contentText);
-			InfoList.push(datasource.IsFocused);
-			if(tempModel.EncImgAddr != '') {
-				var EncImgAddrs = tempModel.EncImgAddr.split('|');
-				var EncAddr = tempModel.EncAddr.split('|');
-
-				//内容的图片
-				for(var i = 0; i < EncImgAddrs.length; i++) {
-					ImageList.push(EncImgAddrs[i])
-					EncAddrList.push(EncAddr[i]);
-				}
-			}
-
-			//底部
-			//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
-			var introduce = '上传了' + ImageList.length + '张图片到相册《手机相册》';
-			var viewCount = tempModel.ReadCnt;
-			var praiseList = [];
-			if(tempModel.LikeUsers.length != 0) {
-				for(var i = 0; i < tempModel.LikeUsers.length; i++)
-					praiseList.push(tempModel.LikeUsers[i]);
-			}
-
-			//[commentList]:评论列表
-			//1.评论[commenter,content]，评论者，评论内容
-			//2.回复[replyer，commenter，replyContent]回复者，评论者，回复的内容
-			var commentList = [];
-
-			for(var i = 0; i < tempModel.Comments.length; i++) {
-
-				var tempComment = tempModel.Comments[i];
-				commentList.push(tempComment);
-				//				if(tempComment.Replys.length != 0) {
-				//					var replys = tempComment.Replys
-				//					for(var j = 0; j < replys.length; j++) {
-				//						var replyModel = replys[j];
-				//						commentList.push(replyModel);
-				//					}
-				//
-				//				}
-
-			}
-
-			InteractionList.push(introduce);
-			InteractionList.push(viewCount);
-			InteractionList.push(praiseList);
-			InteractionList.push(commentList);
 			if(preModel.focusFlag == 0) {
-				pageFlag = 0
-				Data = [InfoList, ImageList, InteractionList, EncAddrList, '']
+				idFlag = '';
+				data.focusFlag = 0;
+				data.pageFlag = 0
+				data.cityCode = '';
+				data.idFlag = '';
+				sliderId = 'top_'
 
 			} else {
-
-				pageFlag = 1
-				Data = [InfoList, ImageList, InteractionList, EncAddrList, 0]
+				idFlag = 'zx';
+				data.pageFlag = 1
+				data.cityCode = 0;
+				data.idFlag = 'zx';
+				sliderId = 'top_0'
 			}
+			data.IsFocused = 1;
+			data.id = 0;
+			data.id_name = data.cityCode + data.idFlag + data.id;
+			var tempModel = dynamiclistitem.addData(data);
+			dynamiclistitem.addItem(table, tempModel);
 
-			dynamiclistitem.addItem(table, Data, 0);
-
-		}
-
-		function addComment() {
-			if(tempIndex.indexOf('-') >= 0) {
-				var indexArr = tempIndex.split('-');
-				var id = indexArr[0];
-				var commentId = indexArr[1];
-				var replyId = indexArr[2];
-
-				var tempModel = zonepArray[id].Comments[commentId];
-				if(!tempModel) {
-					mui.toast('不可以回复自己');
-					return;
-				}
-				console.log(JSON.stringify(tempModel));
-				var upperId = tempModel.TabId;
-				var replyUserId;
-				var ReplyIdName;
-				if(replyId == '评论') {
-					replyUserId = tempModel.UserId
-					ReplyIdName = tempModel.UserIdName
-				} else {
-					replyUserId = tempModel.Replys[replyId].UserId;
-					ReplyIdName = tempModel.Replys[replyId].UserIdName;
-				}
-				if(personalUTID == replyUserId) {
-					mui.toast('不可以回复自己');
-					return;
-				}
-			}
-
-			events.openNewWindowWithData('../show/add-comment.html', {
-				tempIndex: tempIndex,
-				zonepArray: zonepArray
-			})
-
-		}
-
-		function addSomeEvent() {
-			var click = []; //记录被点击的li的id和被点击元素
-
-			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-
-				var toast = '';
-				mui.each(click, function(index, element) {
-					toast = toast + element;
-				});
-				var id = this.getAttribute('id');
-				console.log('点击cell' + this.id);
-				click.push(id);
-				//								mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
-				click = [];
-			});
-			//点击评论者名字
-			mui('.mui-table-view').on('tap', '.dynamic-comment-name', function() {
-				console.log('评论者id' + this.dataset.info);
-				mui.openWindow({
-					url: 'zone_main.html',
-					id: 'zone_main.html',
-					styles: {
-						top: '0px', //设置距离顶部的距离
-						bottom: '0px'
-					},
-
-					extras: {
-						data: this.dataset.info,
-						NoReadCnt: 0,
-						flag: '0'
-					},
-					createNew: true,
-
-				});
-				window.event.stopPropagation()
-
-			})
-			//点赞人多余20人 点击跳转到点赞的人的列表界面
-			mui('.mui-table-view').on('tap', '.PraiseList', function() {
-				console.log('跳转到点赞人列表界面')
-				var index = this.id.replace('PraiseList0zx', '')
-				console.log(index)
-				var LikeUsers = zonepArray[index].LikeUsers
-				console.log(JSON.stringify(LikeUsers));
-				events.fireToPageWithData("classSpace-persons.html", "personsList", { zanList: LikeUsers, type: 3 });
-				//				mui.openWindow({
-				//					url: 'classSpace-persons.html',
-				//					id: 'classSpace-persons.html',
-				//					styles: {
-				//						top: '0px', //设置距离顶部的距离
-				//						bottom: '0px'
-				//					},
-				//
-				//					extras: {
-				//						data: LikeUsers,
-				//
-				//					},
-				//					createNew: true,
-				//
-				//				});
-				window.event.stopPropagation()
-			})
-			//点击点赞的人跳转到相应界面
-			mui('.mui-table-view').on('tap', '.praiseName', function() {
-				console.log('点赞者id' + this.dataset.info);
-				mui.openWindow({
-					url: 'zone_main.html',
-					id: 'zone_main.html',
-					styles: {
-						top: '0px', //设置距离顶部的距离
-						bottom: '0px'
-					},
-
-					extras: {
-						data: this.dataset.info,
-						NoReadCnt: 0,
-						flag: '0'
-					},
-					createNew: true,
-
-				});
-				window.event.stopPropagation()
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
-				click.push('头像');
-			});
-			mui('.mui-table-view').on('tap', 'h4', function() {
-				click.push('姓名');
-			});
-			//删除动态
-			mui('.mui-table-view').on('tap', '.mui-icon-closeempty', function() {
-				var btnArray = ['取消', '确定'];
-				var closeId = this.id;
-				mui.confirm('确定删除此条动态？', '提醒', btnArray, function(e) {
-					if(e.index == 1) {
-						var index = closeId.replace('delete', '');
-						console.log(closeId);
-						var comData = {
-							userSpaceId: zonepArray[index].TabId, //用户空间ID
-						};
-						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-						postDataPro_delUserSpaceById(comData, wd, function(data) {
-							wd.close();
-							if(data.RspCode == 0) {
-								mui.toast('已删除');
-								//						var wobj = plus.webview.currentWebview();
-								//						wobj.reload(true);
-								var deleteNode = document.getElementById(index);
-								deleteNode.parentNode.removeChild(deleteNode);
-								zonepArray.splice(index, 1)
-							} else {
-								mui.toast(data.RspTxt);
-							}
-
-						})
-					} else {
-
-					}
-				})
-
-				click.push('向下按钮');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-contenttext', function() {
-				click.push('动态文字');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-image', function() {
-				click.push('图片' + this.getAttribute('src'));
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-image-more', function() {
-				click.push('更多图片');
-			});
-			//点赞和取消点赞
-			mui('.mui-table-view').on('tap', '.dynamic-icon-praise', function() {
-		click.push('点赞');
-		var userInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO); //用户id
-		personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
-		var index = this.id.replace('praise', '');
-
-		var color = this.style.color;
-		if(color == 'rgb(183, 183, 183)') {
-			var comData = {
-				userId: personalUTID, //用户ID
-				userSpaceId: datasource.TabId, //用户空间ID
-			};
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			postDataPro_setUserSpaceLikeByUser(comData, wd, function(data) {
-				wd.close();
-				if(data.RspCode == 0) {
-					console.log('index=' + index)
-					document.getElementById("line" + index).className = 'mui-media-body dynamic-line'
-					var a = document.getElementById("praise" + index);
-					a.style.color = 'rgb(26, 155, 255)'
-					//							mui.toast('点赞成功');
-					var PraiseList = document.getElementById("PraiseList" + index);
-					var praiseNameList = PraiseList.getElementsByTagName("font");
-					datasource.LikeUsers.unshift(userInfo) //把当前用户信息放到数组LikeUsers第一位
-					if(praiseNameList.length > 0) {
-						console.log(PraiseList.innerHTML);
-						PraiseList.innerHTML = PraiseList.innerHTML.replace('mui-pull-left">', 'mui-pull-left">' + '<font class="common-font-family-Regular dynamic-praise-name praiseName" data-info="' + userInfo.utid + '">' + personalunick + '</font>、')
-					console.log(PraiseList.innerHTML);
-					} else {
-
-						PraiseList.innerHTML = '<img id= "praiseImg' + index + '" src="../../image/dynamic/praise.png" class="dynamic-icon-praise-small mui-pull-left" />' +
-							'<font class="common-font-family-Regular dynamic-praise-name praiseName" data-info="' + userInfo.utid + '">' + personalunick + '</font>';
-					}
-				} else {
-					mui.toast(data.RspTxt);
-				}
-
-			})
-
-		} else {
-
-			var comData = {
-				userId: personalUTID, //用户ID
-				userSpaceId: datasource.TabId, //用户空间ID
-			};
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			postDataPro_delUserSpaceLikeByUser(comData, wd, function(data) {
-				wd.close();
-				if(data.RspCode == 0) {
-					var a = document.getElementById("praise" + index);
-					a.style.color = 'rgb(183, 183, 183)'
-					//							mui.toast('取消点赞成功');
-					var PraiseList = document.getElementById("PraiseList" + index);
-					var praiseName = PraiseList.getElementsByTagName("font");
-					var tempLikeUser = datasource.LikeUsers
-					for(var i in tempLikeUser) {
-						if(tempLikeUser[i].utid == userInfo.utid) {
-							tempLikeUser.splice(i, 1);
-							console.log(JSON.stringify(tempLikeUser))
-						}
-					}
-					console.log(praiseName.length)
-					if(praiseName.length > 1) {
-						console.log('多个人点赞')
-						for(var i=0; i < praiseName.length; i++) {
-
-							if(praiseName[i].dataset.info == userInfo.utid) {
-								PraiseList.innerHTML = PraiseList.innerHTML.replace('<font class="common-font-family-Regular dynamic-praise-name praiseName" data-info="' + userInfo.utid + '">' + personalunick + '</font>、','')
-
-							}
-						}
-
-					} else {
-						console.log('一个人点赞')
-
-						var comment0 = document.getElementById('"replyComment' + index + '-0-评论"');
-						if(comment0) {
-							document.getElementById("line" + index).className = 'mui-media-body dynamic-line'
-						} else {
-							document.getElementById("line" + index).className = 'mui-media-body dynamic-line mui-hidden'
-						}
-						for(var i=0;i<praiseName.length;i++) {
-							if(praiseName[i].dataset.info == userInfo.utid) {
-								PraiseList.removeChild(praiseName[i]);
-							}
-						}
-
-						var praiseImg = document.getElementById("praiseImg" + index);
-						PraiseList.removeChild(praiseImg);
-
-					}
-				} else {
-					mui.toast(data.RspTxt);
-				}
-
-			})
-
-		}
-		window.event.stopPropagation()
-	});
-			mui('.mui-table-view').on('tap', '.dynamic-praise-name', function() {
-				click.push('点赞者：' + this.innerText);
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-comment-name', function() {
-				click.push('评论者：' + this.innerText);
-			});
-
-			//			评论
-			mui('.mui-table-view').on('tap', '.dynamic-icon-comment', function() {
-				//				click.push('评论');
-				tempIndex = this.id.replace('comment' + '0zx', '');
-				tempIndex = tempIndex.replace('comment', '');
-				tempIndex = tempIndex.replace('zx', '');
-				addComment();
-
-				window.event.stopPropagation()
-
-			});
-
-			//			回复评论
-			mui('.mui-table-view').on('tap', '.replyComment', function() {
-				tempIndex = this.id.replace('replyComment' + '0zx', '');
-				tempIndex = tempIndex.replace('replyComment', '');
-				tempIndex = tempIndex.replace('zx', '');
-				addComment();
-
-				window.event.stopPropagation()
-
-			});
-
-		}
-		//加载数据
-		function addData(index) {
-			//[[InfoList],[ImageList],[InteractionList]]动态的信息
-			var Data = [];
-			var InfoList = []; //头部和内容
-			var ImageList = []; //内容的图片
-			var EncAddrList = [];
-			var InteractionList = []; //底部内容
-
-			//个人信息和内容
-			//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
-			//判断img是否为null，或者空
-			zonepArray.push()
-			var tempModel = zonepArray[index];
-			tempModel.uimg = updateHeadImg(tempModel.uimg)
-
-			var personalImage = tempModel.uimg;
-			var personalName = tempModel.unick;
-			var time = tempModel.PublishDate;
-			var contentText = tempModel.MsgContent;
-			InfoList.push(personalImage);
-			InfoList.push(personalName);
-			InfoList.push(time);
-			InfoList.push(contentText);
-			if(tempModel.EncImgAddr != '') {
-				var EncImgAddrs = tempModel.EncImgAddr.split('|');
-				var EncAddr = tempModel.EncAddr.split('|');
-
-				//内容的图片
-				for(var i = 0; i < EncImgAddrs.length; i++) {
-					ImageList.push(EncImgAddrs[i])
-					EncAddrList.push(EncAddr[i]);
-				}
-			}
-
-			//底部
-			//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组111
-			var introduce = '上传了' + ImageList.length + '张图片到相册《手机相册》';
-			var viewCount = tempModel.ReadCnt;
-			var praiseList = [];
-			if(tempModel.LikeUsers.length != 0) {
-				for(var i = 0; i < tempModel.LikeUsers.length; i++)
-					praiseList.push(tempModel.LikeUsers[i]);
-			}
-
-			//[commentList]:评论列表
-			//1.评论[commenter,content]，评论者，评论内容
-			//2.回复[replyer，commenter，replyContent]回复者，评论者，回复的内容
-			var commentList = [];
-
-			for(var i = 0; i < tempModel.Comments.length; i++) {
-
-				var tempComment = tempModel.Comments[i];
-				commentList.push(tempComment);
-
-			}
-
-			InteractionList.push(introduce);
-			InteractionList.push(viewCount);
-			InteractionList.push(praiseList);
-			InteractionList.push(commentList);
-			Data = [InfoList, ImageList, InteractionList, EncAddrList, '']
-			return Data;
 		}
 
 		//设置个人空间动态为已读
@@ -687,64 +259,8 @@
 				}
 
 			})
-			//			}
 		}
-		//点击关注
-		mui('.mui-table-view').on('tap', '.btn-attention',
-			function() {
-				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户昵称
 
-				var tempId = this.id;
-				//80.（用户空间）设置某用户的关注
-				//所需参数
-				var comData = {
-					userId: personalUTID, //用户ID
-					focusId: datasource.PublisherId, //关注ID
-					status: '1' //关注状态，0 不关注，1 关注
-				};
-				//返回：1为正确
-				var wd = events.showWaiting();
-				postDataPro_setUserFocus(comData, wd, function(data) {
-					wd.close();
-					if(data.RspCode == 0) {
-						var btn = document.getElementById(tempId);
-						btn.innerHTML = '已关注'
-						btn.className = 'mui-btn mui-pull-right btn-attentioned'
-						mui.fire(plus.webview.currentWebview().opener(), 'changeFocus', {
-							data: datasource.PublisherId,
-							IsFocused: 1
-						})
-					}
-
-				})
-			}) //点击已关注
-		mui('.mui-table-view').on('tap', '.btn-attentioned', function() {
-			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户昵称
-			var tempId = this.id;
-			//80.（用户空间）设置某用户的关注
-			//所需参数
-			var comData = {
-				userId: personalUTID, //用户ID
-				focusId: datasource.PublisherId, //关注ID
-				status: '0' //关注状态，0 不关注，1 关注
-			};
-			//返回：1为正确
-			var wd = events.showWaiting();
-			postDataPro_setUserFocus(comData, wd, function(data) {
-				wd.close();
-				console.log(JSON.stringify(data))
-				if(data.RspCode == 0) {
-					var btn = document.getElementById(tempId);
-					btn.innerHTML = '关注'
-					btn.className = 'mui-btn mui-pull-right btn-attention'
-					mui.fire(plus.webview.currentWebview().opener(), 'changeFocus', {
-						data: datasource.PublisherId,
-						IsFocused: 0
-					})
-				}
-
-			})
-		})
 		/**
 		 * 下拉刷新具体业务实现
 		 */
