--- a/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
@@ -44,71 +44,28 @@
 				border-top: none;
 				border-bottom: none;
 			}
+
+			.show-picture {
+				overflow: hidden;
+				position: relative;
+			}
+
+			.show-picture img {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
 		</style>
 	</head>
 
 	<body>
-		<div id="content" class="mui-content">
-			<!--<div id="slider" class="mui-slider mui-fullscreen" data-slider="1">
-				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" data-scroll="2">
-					<div id="topList" class="mui-scroll" style="transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-						<a class="mui-control-item mui-active" id="top_370100" href="#bot_370100">济南市</a>
-						<a class="mui-control-item" id="top_450100" href="#bot_450100">南宁市</a>
-					</div>
-				</div>
-				<div id="sliderGroup" class="mui-slider-group" style="transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-					<div class="mui-slider-item mui-control-content mui-active" id="bot_370100" data-info="{&quot;acode&quot;:&quot;370100&quot;,&quot;aname&quot;:&quot;济南市&quot;}" data-page="{&quot;pageIndex&quot;:1,&quot;totalPage&quot;:1}">
-						<div id="bot_sw_370100" class="mui-scroll-wrapper" data-scroll="3">
-							<div id="bot_sc_370100" class="mui-scroll" data-pulltorefresh="5" style="transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-								<ul id="bot_ul_370100" class="mui-table-view" data-imagelazyload="7">
-									<li class="mui-table-view-cell mui-media" data-tabid="2" data-turl="http://edu.dzwww.com/dzjyxw/sdjx/201701/t20170116_15435620.html" data-sehistory="false" id="0">
-										<div id="mediaBody_0" class="mui-media-body secedu-body">
-											<div id="title_0" class="secedu-title" style="">山东省教育厅召开2016年度基层党组织书记抓党建述职会议</div>
-											<div class="mui-row">
-												<div class="mui-col-xs-4 mui-col-sm-4"><img id="image_3_0_0" data-lazyload="http://www.sdedu.gov.cn/sdjy/_gzdt/955491/2017011314295856228.JPG" data-lazyload-id="0" style="height: 73.3333px;"></div>
-												<div class="mui-col-xs-4 mui-col-sm-4"><img id="image_3_1_0" data-lazyload="http://www.sdedu.gov.cn/sdjy/_gzdt/955491/2017011314294783143.JPG" data-lazyload-id="1" style="height: 73.3333px;"></div>
-												<div class="mui-col-xs-4 mui-col-sm-4"><img id="image_3_2_0" data-lazyload="http://www.sdedu.gov.cn/sdjy/_gzdt/955491/2017011314295282818.JPG" data-lazyload-id="2" style="height: 73.3333px;"></div>
-											</div>
-											<div id="from_0" class="secedu-from">来源: 山东省教育厅 | 2017-01-16</div>
-										</div>
-									</li>
-									<li class="mui-table-view-cell mui-media" data-tabid="1" data-turl="http://edu.dezhoudaily.com/jyxw/2017/01/2017-01-121249509.html" data-sehistory="false" id="1">
-										<div id="mediaBody_1" class="mui-media-body secedu-body">
-											<div id="title_1" class="secedu-title" style="">山东：中高考将增加法治知识内容</div>
-											<div id="from_1" class="secedu-from">来源：中国教育在线 | 2017-01-12</div>
-										</div>
-									</li>
-								</ul>
-								<div class="mui-pull-bottom-tips">
-									<div class="mui-pull-bottom-wrapper"><span class="mui-pull-loading"></span></div>
-								</div>
-							</div>
-							<div class="mui-scrollbar mui-scrollbar-vertical">
-								<div class="mui-scrollbar-indicator" style="transition-duration: 0ms; display: none; height: 519px; transform: translate3d(0px, 0px, 0px) translateZ(0px);"></div>
-							</div>
-						</div>
-					</div>
-					<div class="mui-slider-item mui-control-content" id="bot_450100" data-info="{&quot;acode&quot;:&quot;450100&quot;,&quot;aname&quot;:&quot;南宁市&quot;}">
-						<div id="bot_sw_450100" class="mui-scroll-wrapper" data-scroll="4">
-							<div id="bot_sc_450100" class="mui-scroll" data-pulltorefresh="6" style="transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-								<ul id="bot_ul_450100" class="mui-table-view"> </ul>
-								<div class="mui-pull-bottom-tips">
-									<div class="mui-pull-bottom-wrapper"><span class="mui-pull-loading"></span></div>
-								</div>
-							</div>
-							<div class="mui-scrollbar mui-scrollbar-vertical">
-								<div class="mui-scrollbar-indicator" style="transition-duration: 0ms; display: none; height: 519px; transform: translate3d(0px, 0px, 0px) translateZ(0px);"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>-->
-		</div>
+		<div id="content" class="mui-content"></div>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/mui.pullToRefresh.js"></script>
 		<script type="text/javascript" src="../../js/mui.pullToRefresh.material.js"></script>
-		<!--<script type="text/javascript" src="../../js/mui.lazyload.js"></script>-->
-		<!--<script type="text/javascript" src="../../js/mui.lazyload.img.js"></script>-->
+		<script type="text/javascript" src="../../js/mui.lazyload.js"></script>
+		<script type="text/javascript" src="../../js/mui.lazyload.img.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
@@ -121,7 +78,10 @@
 			var pullToRefresh = [] //存储下拉上拉的控件
 			var sliderId = ''; //记录显示的城市
 			var index; //获取index的webview
-			var showImage = []; //存储需要显示的图片的路径
+
+			//var showImage = []; //存储需要显示的图片的路径
+			//var clientHeight = document.documentElement.clientHeight; //webview显示的高度
+
 			mui.plusReady(function() {
 				//events.closeWaiting();
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
@@ -249,36 +209,13 @@
 								//设置监听上下滑动
 								mui('#sliderGroup .mui-scroll-wrapper').each(function(index, element) {
 									element.addEventListener('scrollstart', function(e) {
-										console.log('scrollstart');
-										setTimeout(function() {
-											var cityId = sliderId.replace('top_', '');
-											var imageArray = mui('#bot_ul_' + cityId + ' img');
-											var scroll = mui('#bot_sw_' + cityId).scroll();
-											if(scroll.y == scroll.maxScrollY) {
-												//滑动到底部
-												return false;
-											}
-											showImage=[];
-											for(var i = 0; i < imageArray.length; i++) {
-												var path = imageArray[i].src;
-												var num = path.indexOf('http://');
-												if(num == 0) {
-													//加载了网络的图片
-													//console.log(imageArray[i].id);
-													var placeholder = '../../' + window.storageKeyName.DEFAULTIMAGELOAD;
-													//var placeholder = '';
-													imageArray[i].src = placeholder;
-												}
-											}
-										}, 200);
-
-									});
-									//element.addEventListener('scroll', function(e) {
-									//console.log('---scroll---');
-									//});
-									element.addEventListener('scrollend', function(e) {
-										console.log('scrollend');
-										showScrollImage();
+										//console.log('scrollstart');
+										var cityCode = sliderId.replace('top_', '');
+										var placeholder = '../../' + window.storageKeyName.DEFAULTSCIEDUIMAGELOAD;
+										var lazyLoad = mui("#bot_ul_" + cityCode).imageLazyload({
+											placeholder: placeholder.toString(), //缩略图
+										}); //懒加载控件
+										lazyLoad.refresh(true);
 									});
 								});
 								requestCityNews(cities[0].acode, 1);
@@ -287,6 +224,7 @@
 					});
 				}
 			}
+
 			/**
 			 * 顶部增加定制的城市和底部列表的框架
 			 * @param {Object} data 定制的城市
@@ -376,7 +314,7 @@
 								if(page) {
 									requestCityNews(info.acode, page.pageIndex + 1);
 								} else {
-
+									mui.toast('数据异常，请下拉刷新后重新尝试');
 								}
 							}
 						}
@@ -403,7 +341,10 @@
 				} else {
 					window.myStorage.setItem(window.storageKeyName.seHistory + '_' + personalUID, []);
 				}
-
+				var placeholder = '../../' + window.storageKeyName.DEFAULTSCIEDUIMAGELOAD;
+				var lazyLoad = mui("#bot_ul_" + cityCode).imageLazyload({
+					placeholder: placeholder.toString(), //缩略图
+				}); //懒加载控件
 				for(var i = 0; i < data.length; i++) {
 					//console.log('addItems ' + JSON.stringify(data[i]));
 					var tips = data[i].tips;
@@ -431,10 +372,10 @@
 						}
 					}
 					SciEduHomeItem.addItem(document.getElementById("bot_ul_" + cityCode), data[i], function() {
-
+						lazyLoad.refresh(true);
 					});
 				}
-				showScrollImage();
+				//console.log(document.getElementById("bot_" + cityCode).innerHTML);
 			}
 
 			/**
@@ -560,9 +501,7 @@
 							tempRefresh.refresh.refresh(true);
 						}
 					}
-					setTimeout(function() {
-						wd.close();
-					}, 2000);
+					wd.close();
 				});
 			}
 
@@ -595,74 +534,6 @@
 							//console.log("evalJS " + evalJS);
 							index.evalJS(evalJS);
 						}
-					}
-				}
-			}
-
-			/**
-			 * 加载完数据后显示需要显示的图片
-			 */
-			function showScrollImage() {
-				var cityId = sliderId.replace('top_', '');
-				var ul = document.getElementById("bot_ul_" + cityId);
-				var cell = mui('#bot_ul_' + cityId + ' .mui-table-view-cell');
-				var scroll = mui('#bot_sw_' + cityId).scroll();
-				var y = scroll.y * (-1); //滚动的距离
-				console.log('offsetHeight ' + ul.offsetHeight);
-				console.log('y ' + y + ' ' + scroll.maxScrollY);
-
-				var ul_offsetHeight = ul.offsetHeight; //所有cell的高度
-				var height = 0; //cell高度累加
-				var clientHeight = document.documentElement.clientHeight; //webview显示的高度
-
-				var idArrary = []; //存储显示的li的id
-
-				//获得需要显示图片的cell
-				for(var i = 0; i < cell.length; i++) {
-					var half = parseInt(cell[i].offsetHeight * 0.5);
-					var height_0 = height + half;
-					height = height + cell[i].offsetHeight * 1;
-					//console.log(cell[i].id + ' half:' + half + ' height_0:' + height_0 + ' height:' + height);
-					if((height_0 > y && ((height - half * 2 - y) < clientHeight))) {
-						//console.log('index:' + index + ' id:' + cell[i].id);
-						idArrary.push(cell[i].id);
-					}
-				}
-
-				//获得cell里的图片id
-				showImage = [];
-				for(var i = 0; i < idArrary.length; i++) {
-					var title = document.getElementById('title_' + idArrary[i]);
-					var li_imageArray = mui('#mediaBody_' + idArrary[i] + ' img');
-					//console.log('idArrary ' + idArrary[i] + ' li_imageArray:' + li_imageArray.length + ' title:' + title.innerText);
-					for(var j = 0; j < li_imageArray.length; j++) {
-						showImage.push({
-							id: li_imageArray[j].id
-						});
-					}
-				}
-
-				//显示图片
-				console.log('showImage ' + showImage.length);
-				setTimeout(function() {
-					showImages();
-				}, 500);
-			}
-
-			/**
-			 * 显示需要显示的图片
-			 */
-			function showImages() {
-				for(var i = 0; i < showImage.length; i++) {
-					if(showImage[i].show == undefined) {
-						var imge = document.getElementById(showImage[i].id);
-						var path = imge.getAttribute('data-lazyload');
-						imge.src = path;
-						showImage[i].show = true; //已经显示了
-						setTimeout(function() {
-							showImages();
-						}, 100);
-						break; //停止本次循环
 					}
 				}
 			}
