--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
@@ -34,11 +34,11 @@
 				display: block;
 			}
 			
-			.mui-table-view-cell div {
+			/*.mui-table-view-cell div {
 				padding-bottom: 10px;
 				padding-top: 5px;
 				width: 100%;
-			}
+			}*/
 		</style>
 	</head>
 
