--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -141,10 +141,10 @@
 											window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
 											//退出登录
 											events.logOff();
-											plus.webview.currentWebview().close();
 											//											plus.runtime.quit();
 											//跳转到登录界面
 											events.openNewWindowWithData('../../html/register/login.html', '');
+//											plus.webview.currentWebview().close();
 										} else {
 											mui.toast(data.RspTxt);
 										}
