增加默认webview的样式

--- a/JiaoBaoYun-hb/html/mine/qun_manage_1.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_1.html
@@ -86,7 +86,22 @@
 				</div>
 			</div>
 			<div id="slider_group" class="mui-slider-group" style="visibility: visible;margin-top: 0px;">
-
+				<!--<div id="qun_bot_217" class="mui-slider-item mui-control-content mui-active">
+					<div class="mui-scroll-wrapper" style="height:537px;background-color:white;">
+						<div class="mui-scroll">
+							<ul id="qun_bot_ul_217" class="mui-table-view">
+								<li class="mui-table-view-cell mui-media member-add" style="text-align: right;">
+									<span class="mui-media-body mui-icon iconfont icon-yaoqing0"></span>
+									<div class="mui-media-body mui-ellipsis">邀请</div>
+								</li>
+								<li id="217_1_7" data-info="{&quot;gid&quot;:217,&quot;gutid&quot;:447,&quot;utid&quot;:7,&quot;ugname&quot;:&quot;群主&quot;,&quot;ugnick&quot;:&quot;森&quot;,&quot;uimg&quot;:null,&quot;mstype&quot;:1}" class="mui-table-view-cell mui-media member-item">
+									<img src="../../image/utils/default_personalimage.png">
+									<div id="name_217_1_7" class="mui-media-body mui-ellipsis" style="color: red;">[老师]群主</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>-->
 			</div>
 			<div id="popover" class="mui-popover">
 				<ul class="mui-table-view">
