--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -90,7 +90,7 @@
 				}
 			});
 			mui('.mui-scroll-wrapper').scroll({
-				indicators: true, //显示滚动条
+				indicators: false, //显示滚动条
 			});
 			//获得侧滑主窗口webview对象
 			var main = null;
