--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -26,13 +26,13 @@
 				<h6 class="comment-item">完成的作业</h6>
 				<div class="homework-container">
 					<div class='student-info'>
-						<img id="stu-head" class='stuInfo-img' />
+						<img id="stu-head" class="stuInfo-img" src="http://oigr7qsvz.bkt.clouddn.com/headimge4.png?1487316536287" />
 						<div class='stuInfo-words'>
-							<h5 id='stu-name' class="stu-name"></h5>
-							<p id='submit-time' class="submit-time"></p>
+							<h5 id='stu-name' class="stu-name">rockan007</h5>
+							<p id='submit-time' class="submit-time">2017-03-28 11:20:51</p>
 						</div>
 					</div>
-					<div id="homework-info" class="homework-info"></div>
+					<div id="homework-info" class="homework-info"><p>fdsgfdsgfdgsgdf</p></div>
 				</div>
 				<!--<div class="result-container">
 					<h6 class="comment-item">作业结果</h6>
@@ -47,8 +47,8 @@
 						<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
 					</div>
 					<div class="commented-holder display-none">
-						<p class="commented-words homework-info work-result"></p>
-						<div class="change-holder mui-pull-right"><span class="change-comment iconfont icon-write"></span></div> 
+						<p id="commented-words" class="commented-words homework-info work-result"></p>
+						<div class="change-container"><div class="change-holder"><span class="change-comment iconfont icon-write"></span></div></div> 
 					</div>
 					
 				</div>
